my-k8s/ingress/sts-home.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sts-home
spec:
  serviceName: sts-home-headless
  replicas: 1
  selector:
    matchLabels:
      app: sts-home
  template:
    metadata:
      labels:
        app: sts-home
    spec:
      containers:
        - name: nginx
          image: nginx:1.26.0
          ports:
            - containerPort: 80          
          volumeMounts:
            - name: data
              mountPath: /usr/share/nginx/html
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "standard"
        resources:
          requests:
            storage: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  name: sts-home-headless # headless
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: sts-home
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: sts-home # singular since it points to a single cluster IP
spec:
  type: ClusterIP
  selector:
    app: sts-home
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 80
