my-k8s/ingress/sts-home-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sts-home-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx   # important if you have multiple ingress controllers
  rules:
    - host: home.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sts-home
                port:
                  number: 8090
